[package]
name = "udit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "^0.3.11"
reqwest = "0.11.10"
scraper = "^0.12.0"
colored = "^2.0.0"
tokio = { version= "^1.17.0", features = ["full"]}
select = "^0.5.0"
