[package]
name = "udit"
version = "0.1.1"
edition = "2021"
description = "UDIT (urban dictionary it) is a tool to quickly search up words with urban dictionary"
repository = "https://github.com/Kara-Zor-El/udit"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "^0.3.11"
reqwest = "0.11.10"
scraper = "^0.12.0"
colored = "^2.0.0"
tokio = { version= "^1.17.0", features = ["full"]}
select = "^0.5.0"
